Fix broken interest icons layout in the styleguide

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -280,7 +280,8 @@ pre.styleguide.is-open
     padding: 10px
     font-size: 12px
 
-.styleguide-icons--destination
+.styleguide-icons--destination,
+.styleguide-icons--interests
   .icon
     +size(100px)
     @extend %inline-block
